--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,18 @@
 {
   "projects": {
     "default": "wiggle-tools"
-  }
+  },
+  "targets": {
+    "wiggle-tools": {
+      "hosting": {
+        "front": [
+          "wiggle-tools"
+        ],
+        "animate": [
+          "wiggle-animate"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
