--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,8 +17,8 @@ jobs:
           path: wiggle-animate
 
       - run: mkdir ./build
-      - run: cd wiggle-tools && npm ci && npm run build && cp ./build/ ../build/front/
-      - run: cd ../wiggle-animate && npm ci && npm run build && cp ./build/ ../build/animate/
+      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./build/ ../build/front/
+      - run: cd ../wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/animate/
       - run: cd ../ && ls -lah ./build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
