--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,6 +16,7 @@ jobs:
           repository: benz2012/wiggle-animate
           path: wiggle-animate
 
+      - run: pwd && find .
       - run: mkdir ./build
       - run: cd wiggle-tools && npm ci && npm run build && cp -r ./build/ ../build/front/
       - run: cd ../wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/animate/
