--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,8 +20,9 @@ jobs:
       - run: mkdir ./build
       - run: cd wiggle-tools && npm ci && npm run build && cp -r ./build/ ../build/front/
       - run: cd wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/animate/
-      - run: ls -lah ./build/
+      - run: find ./build/
 
+      - run: cp ./wiggle-tools/firebase.json ./wiggle-tools/.firebaserc ./
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
