--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,8 +1,11 @@
 name: Deploy to Firebase Hosting on merge
-'on':
+
+on:
   push:
     branches:
       - main
+  workflow_dispatch: true
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
