--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Branch or Commit Reference'
+        type: string
+        required: true
 
 jobs:
   build_and_deploy:
