--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,7 @@ jobs:
           path: wiggle-animate
 
       - run: mkdir ./build
-      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./build/ ../build/front/
+      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./public/ ../build/front/
       - run: cd wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/animate/
       - run: find ./build/
 
