--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop --open",
+    "start": "gatsby develop --open",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
