--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "start": "gatsby develop --open",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
     "@fontsource/roboto-slab": "^5.0.17",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-preload-fonts": "^4.12.1",
     "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.1",
