--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop --open",
-    "start": "gatsby develop --open",
-    "build": "gatsby build",
+    "develop": "gatsby clean && gatsby develop --open",
+    "start": "gatsby clean && gatsby develop --open",
+    "build": "gatsby clean && gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "preload-fonts": "gatsby-preload-fonts"
