--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,8 +20,8 @@ jobs:
           path: wiggle-animate
 
       - run: mkdir ./build
-      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./public/ ../build/front/
-      - run: cd wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/animate/
+      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./public/ ../build/
+      - run: cd wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/_subapps/animate/
       - run: find ./build/
 
       - run: cp ./wiggle-tools/firebase.json ./wiggle-tools/.firebaserc ./
