--- a/firebase.json
+++ b/firebase.json
@@ -8,16 +8,12 @@
     ],
     "rewrites": [
       {
-        "source": "/animate{,/**}",
-        "destination": "/animate/index.html"
-      },
-      {
-        "source": "/front/",
-        "destination": "/front/index.html"
+        "source": "/_subapps/animate{,/**}",
+        "destination": "/_subapps/animate/index.html"
       },
       {
         "source": "**",
-        "destination": "/front/index.html"
+        "destination": "/index.html"
       }
     ],
     "headers": [
