--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,7 @@ jobs:
           path: wiggle-animate
 
       - run: mkdir ./build && mkdir ./build/_subapps
-      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./public/ ../build/
+      - run: cd wiggle-tools && npm ci && npm run build && cp -r ./public/. ../build/
       - run: cd wiggle-animate && npm ci && npm run build && cp -r ./build/ ../build/_subapps/animate/
       - run: find ./build/
 
