still trying to route the subapps properly

--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,10 @@
         "destination": "/_subapps/animate/index.html"
       },
       {
+        "source": "/animate{,/**}",
+        "destination": "/_subapps/animate/index.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
